[project]
name = "qr-code-display"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Karlsson",email = "lukwam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyzbar (>=0.1.9,<0.2.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "qrcode (>=8.2,<9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
